<resources>
    <string name="app_name">OGG</string>
    <string name="app_name_korean">오늘도 지구를 지켰다</string>
    <string name="sha_1_for_debug">A0:83:BE:A1:74:5D:4F:81:09:E3:CF:A4:6F:0F:B9:F6:3E:89:87:6C</string>
    <string name="navigation_title_env">환경</string>
    <string name="navigation_title_myact">활동</string>
    <string name="navigation_title_graph">통계</string>
    <string name="navigation_title_feed">피드</string>
    <string name="destination_title_login">로그인</string>
    <string name="destination_title_join">회원가입</string>
    <string name="destination_title_members">마이페이지</string>
    <string name="destination_title_badges">활동 배지</string>
    <string name="destination_title_settings">설정</string>
    <string name="destination_title_listaim">활동 목표 선택</string>
    <string name="destination_title_listset">활동 선택</string>
    <string name="destination_title_popup">팝업</string>
    <string name="destination_title_camera">카메라</string>
    <string name="destination_title_permissions">권한 요청</string>
    <string name="destination_title_post">인증 등록</string>
    <string name="destination_title_listchanger">활동 수정</string>
    <string name="destination_title_checklist_driving">친환경 운전 습관 확인하기</string>
    <string name="destination_title_checklist_tire">타이어 및 휠 점검하기</string>
    <string name="destination_title_postlink">산림 중요성 인식하기</string>
    <string name="destination_title_feed_detail">인증 상세보기</string>
    <string name="co2_aim1_turtle">1.4</string>
    <string name="co2_aim2_seal">2.78</string>
    <string name="co2_aim3_dolphin">5.22</string>
    <string name="co2_default_zero">0</string>
    <string name="text_invalid">404 Not Found</string>
    <string name="text_co2_all">%.1f</string>
    <string name="description_myact_image_appbar">아무런 기능이 없는 커다란 남자 아이</string>
    <string name="description_">활동을 설명하는 데이터베이스 BLOB 이미지</string>
    <string name="description_common_button_exit">뒤로가기 버튼</string>
    <string name="description_common_button_arrow_right">상세보기</string>
    <string name="description_common_button_arrow_down">스탬프 펼치기</string>
    <string name="description_env_stamp_today">오늘 스티커</string>
    <string name="description_myenv_background">환경의 상태를 나타내는 이미지</string>
    <string name="description_myenv_image_dot">스탬프에 가려져 보이지 않는 꾸미기 금지구역</string>
    <string name="description_myenv_image_ogg">활동 상태를 대변하는 캐릭터</string>
    <string name="description_listaim_image_one">바다거북 탈을 쓴 얼굴 이미지</string>
    <string name="description_listaim_image_two">물개 탈을 쓴 얼굴 이미지</string>
    <string name="description_listaim_image_three">돌고래 탈을 쓴 얼굴 이미지</string>
    <string name="description_badgelist_image_badges">배지 그림</string>
    <string name="description_badgelist_image_placeholder">배지가 없을 때 보이는 물음표 이미지</string>
    <string name="description_myact_card_image">각 활동을 나타내는 이미지</string>
    <string name="description_preview_photo">카메라로 찍은 사진</string>
    <string name="description_scroll">스크롤</string>
    <string name="description_bottom_sheet">위로 올라오는 창</string>
    <string name="description_pager_indicator">페이지를 표시하는 점</string>
    <string name="description_button_plus">더하기 버튼</string>
    <string name="description_button_minus">빼기 버튼</string>
    <string name="description_button_report">신고하기 기능</string>
    <string name="description_indicator">%d번 째 인디케이터</string>
    <string name="env_text_before_message">21일 프로젝트를 시작해볼까요?</string>
    <string name="env_button_start">시작하기</string>
    <string name="env_toast_badge">획득한 배지가 있어요</string>
    <string name="stamplayout_text_nickname">%s님</string>
    <string name="stamplayout_text_title">21일 중 %d일째</string>
    <string name="stamplayout_text_body">목표 탄소량까지 %.2fkg 남았어요</string>
    <string name="stamplayout_text_body_beyond">목표 탄소량보다 %.2fkg 더 줄였어요</string>
    <string name="listaim_text_title">온실가스 1인 1톤 줄이기란,</string>
    <string name="listaim_text_title_instruction">탄소중립 실천을 위한 기후 캠페인이에요. \n알맞은 목표 설정으로 환경보호 습관을 만들어보아요!</string>
    <string name="listaim_text_one_title">초보거북</string>
    <string name="listaim_text_two_title">중수물개</string>
    <string name="listaim_text_three_title">고수돌고래</string>
    <string name="listaim_text_instruction_one">하루 %.2fkg 탄소 감축으로</string>
    <string name="listaim_text_instruction_two">멸종위기종 %s를 구해봐요!</string>
    <string name="listaim_button">다음으로 ></string>
    <string name="listaim_text_dialog_title">프로젝트를 중단하시겠어요?</string>
    <string name="listaim_text_dialog_body">지금까지 선택했던 내용이 전부 삭제돼요.</string>
    <string name="listaim_button_dialog_left">취소하기</string>
    <string name="listaim_button_dialog_right">중단하기</string>
    <string name="listset_button_allset">완료</string>
    <string name="listset_button_revise">수정</string>
    <string name="listset_text_title">오늘의 환경 활동 리스트를 만들어보세요</string>
    <string name="listset_text_title_instruction">목표 탄소량을 채우면 활동을 시작할 수 있어요</string>
    <string name="listset_text_title_instruction_allset">선택한 활동들로 지구를 구해보아요</string>
    <string name="listset_text_toast">최대 5개를 선택할 수 있습니다</string>
    <string name="listset_text_nocar">차량 정보 등록 후 활동 가능합니다</string>
    <string name="listset_text_sust">이전에 등록한 \'지속가능한 활동\'이 포함되었어요!</string>
    <string name="listset_text_dialog_title">적용 기간을 선택해주세요</string>
    <string name="listset_text_dialog_body">수정한 리스트를 적용할 범위를 지정해주세요 \n 오늘 혹은 남은 기간 전체에 적용할 수 있어요</string>
    <string name="listset_button_dialog_left">오늘만 수정</string>
    <string name="listset_button_dialog_right">전체 수정</string>
    <string name="badgelist_text_badge_count">보유한 배지 %d 개</string>
    <string name="badgelist_button">닫기</string>
    <string name="badgelist_detail_count">%d/%d회</string>
    <string name="badgelist_detail_count_co2">%.3f/%dkg</string>
    <string name="badgelist_detail_date">%s 획득</string>
    <string name="badgelist_filter_feed">피드에 반응</string>
    <string name="badgelist_filter_clear">연속 활동</string>
    <string name="badgelist_filter_part">카테고리별 활동</string>
    <string name="badgelist_filter_reaction">피드 반응 스티커</string>
    <string name="badgelist_filter_sust">지속가능한 활동</string>
    <string name="badgelist_filter_co2">오늘의 활동 탄소량</string>
    <string name="badgelist_filter_extra">특별 활동</string>
    <string name="envlayer_text_default_title">아직 모은 배지가 없어요!</string>
    <string name="envlayer_text_default_detail">더 많은 활동 인증을 통해 배지를 얻어보세요</string>
    <string name="envlayer_button_save">저장하기</string>
    <string name="envlayer_button_saved">꾸미기가 저장 되었어요</string>
    <string name="myact_text_title_null">21일 프로젝트를 시작해요!</string>
    <string name="myact_text_body_null">오늘의 활동을 채우고, 환경 보호 습관을 만들어보세요!</string>
    <string name="myact_text_main_title">오늘도 함께 지구를 지켜볼까요?</string>
    <string name="myact_text_aim_co2"> %.2fkg</string>
    <string name="myact_text_reduced_co2">%.2fkg 줄였어요!</string>
    <string name="myact_text_title_today">오늘의 활동</string>
    <string name="myact_text_title_sustainable">지속가능한 활동</string>
    <string name="myact_text_title_extra">특별 활동</string>
    <string name="myact_today_edit_button">수정하기</string>
    <string name="myact_button">인증하기</string>
    <string name="myact_text_title_done">인증완료</string>
    <string name="myact_text_body_done">인증 가능 횟수를 \n 전부 채웠어요</string>
    <string name="myact_tooltip_sustainable">한번의 활동으로 탄소 감축량을\n계속 지속할 수 있어요.</string>
    <string name="myact_tooltip_extra">줄인 탄소 감축량을 바로 확인할 수는 없지만,\n미래의 환경에 큰 도움이 될 수 있어요.</string>
    <string name="post_text_co2">탄소감축량 %.3f kg</string>
    <string name="post_text_available">인증 가능 횟수</string>
    <string name="post_text_available_body">하루 %d번</string>
    <string name="post_text_available_body_sust">%d일에 한 번</string>
    <string name="post_text_guidlines">인증 방법</string>
    <string name="post_button_take_photo">카메라 촬영</string>
    <string name="post_button_take_gallary">앨범 업로드</string>
    <string name="post_button_2">확인하기</string>
    <string name="post_button_3">인증하기</string>
    <string name="post_button_4">차량 등록하기</string>
    <string name="post_button_5">체크리스트 작성하기</string>
    <string name="camera_button_retake_photo">다시 촬영</string>
    <string name="camera_button_use_photo">인증 올리기</string>
    <string name="camera_button_retake_photo_gallery">다시 선택</string>
    <string name="post_text_title_completed">인증이 완료되었어요!</string>
    <string name="post_text_body_completed">환경에 어떤 변화가 있는지 확인해보세요</string>
    <string name="post_button_completed">확인</string>
    <string name="post_text_title_30002">탄소중립에서 산림의 역할을 알아보세요</string>
    <string name="post_text_body_30002">2050 탄소중립을 위한 온실가스 흡수 목표의 93%인 \n2,360만톤을 산림이 담당할 계획이에요</string>
    <string name="post_text_subtitle_30002_1">1. 탄소흡수원으로서 산림의 역할 인식하기</string>
    <string name="post_text_body_30002_1">숲을 통한 탄소 중립은 어떻게 이룰 수 있을지 알아보세요</string>
    <string name="post_text_subtitle_30002_2">2. 산림의 탄소 흡수량 알아보기</string>
    <string name="post_text_body_30002_2">산림은 탄소를 어디에 저장하고 어떻게 흡수할까요?</string>
    <string name="post_text_subtitle_30002_3">3. 친환경 벌채 공부하기</string>
    <string name="post_text_body_30002_3">벌채가 꼭 나쁜 것만은 아닌 이유가 뭘까요?</string>
    <string name="post_text_subtitle_30002_4">4. 산림청 산불예방 캠페인 확인하기</string>
    <string name="post_text_body_30002_4">산불을 막을 방법을 알아보아요</string>
    <string name="post_text_title_10011">친환경 운전 습관이란,</string>
    <string name="post_text_body_10011">연료 효율을 높이고 대기 오염을 줄이기위한 운전 습관이에요 \n목록을 실제로 실천하면 40그루의 나무를 살릴 수 있어요</string>
    <string name="post_text_title_20007">휠 얼라인먼트가 정렬되지 않으면,</string>
    <string name="post_text_body_20007">차체가 한 쪽으로 기울어, 바닥과의 마찰이 커지게 됩니다. 타이어가 편마모되어 사고 위험이 커질 수 있고, 많은 연료를 소모하기도 하여 연비가 저하됩니다.</string>
    <string name="myact_card_text_title_done">인증 완료</string>
    <string name="myact_card_text_subtitle_done">오늘 하루 인증 횟수를\n다 채웠어요!</string>
    <string name="myact_card_text_post_date">%s 등록 \n%d일 간 지속</string>
    <string name="myact_card_text_post_date_left">%s 등록 \n%d일 뒤 다시 가능</string>
    <string name="graph_text_title_page">%d 회</string>
    <string name="graph_text_title_page_null">프로젝트 통계</string>
    <string name="graph_text_title_page_current">진행 중인 프로젝트</string>
    <string name="graph_text_title_null">아직 통계가 없어요</string>
    <string name="graph_text_body_null">탄소 중립을 위한 기후활동을 시작해보아요</string>
    <string name="graph_text_no_data">no data</string>
    <string name="graph_title_myact">나의 탄소 감축 활동</string>
    <string name="graph_title_myact_category">카테고리별 줄인 탄소량</string>
    <string name="graph_title_myact_most_reduce">가장 많은 탄소를 줄인 활동명 TOP3</string>
    <string name="graph_title_myact_seachart_1">당신이 지킨 \n북극빙하의 면적</string>
    <string name="graph_title_myact_seachart_2">같은 양의 탄소를 \n흡수하는 해초지 크기</string>
    <string name="graph_title_myact_seachart_subtitle">내가 줄인 탄소량으로</string>
    <string name="graph_title_myact_seachart_co2">%.1fm²</string>
    <string name="graph_title_certify">나의 인증활동</string>
    <string name="graph_title_certify_most_reaction">가장 많은 반응을 받은 활동</string>
    <string name="graph_title_certify_most_reaction_subtitle">활동명</string>
    <string name="graph_title_certify_most_certify">가장 많이 인증한 활동명 TOP3</string>
    <string name="count_format">%1$s개</string>
    <string name="rank_format">상위 %1$.1f%%</string>
    <string name="graph_title_special">나의 특별활동</string>
    <string name="graph_title_special_act_chart">특별활동 전체 순위</string>
    <string name="feed_text_title_null">아직 등록된 피드가 없어요</string>
    <string name="feed_text_body_null">첫 번째로 활동을 등록해보세요</string>
    <string name="feed_text_report_title">정말 신고하시겠어요?</string>
    <string name="feed_text_report_body">신고가 5회 누적되면 \n더이상 피드에 보이지 않아요</string>
    <string name="feed_text_report_left_button">취소하기</string>
    <string name="signup">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="send_email">이메일 인증 보내기</string>
    <string name="sinin_button_find_password">비밀번호 찾기</string>
    <string name="signin_inputtext_email">가입한 이메일</string>
    <string name="signin_button_find_password">이메일로 비밀번호 찾기</string>
</resources>