<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_baby_gray"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            app:title="">

            <TextView
                android:id="@+id/text_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StyleText.header"
                android:text="@string/destination_title_postlink"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/text_garbage_one"
            style="@style/StyleText.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_regular"
            android:paddingTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_regular"
            android:text="@string/post_text_title_30002" />

        <TextView
            android:id="@+id/text_garbage_two"
            style="@style/StyleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_regular"
            android:text="@string/post_text_body_30002"
            android:textColor="@color/primary_gray"
            android:textStyle="bold"
            android:textAlignment="center" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/pager_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_text"
                        android:layout_marginStart="@dimen/spacing_extra_medium"
                        android:layout_marginEnd="@dimen/spacing_extra_medium"
                        android:layout_marginBottom="@dimen/spacing_extra_small"
                        android:orientation="horizontal" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/pager_indicator_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/myact_indicator_height"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:background="@color/secondary_baby_gray"
                        android:contentDescription="@string/description_pager_indicator"
                        app:tabBackground="@drawable/common_indicator_selector"
                        app:tabMinWidth="0dp"
                        app:tabMaxWidth="@dimen/dimension_80"
                        app:tabMode="fixed"
                        app:tabGravity="center"
                        app:tabIndicatorGravity="center"
                        app:tabIndicatorHeight="0dp" />

                </LinearLayout>
            </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_post_link"
            style="@style/StyleButtonOgg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginBottom="@dimen/spacing_larger"
            android:text="@string/camera_button_use_photo" />
    </LinearLayout>
</layout>